<resources>
    <string name="app_name">Ecell ADGITM</string>
    <string name="title_work">Work</string>
    <string name="title_events">Events</string>
    <string name="title_about">About</string>
    <string name="facebook_application_id">148405212615375</string>
    <string name="fb_login_protocol_scheme">fb148405212615375</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="founded_on_15_october_2015">Founded on 15 October 2015</string>
    <string name="email"><u>niececell@gmail.com</u></string>
    <string name="mission">Mission</string>
    <string name="website">http://www.ecellniec.in</string>
    <string name="facebook">https://www.facebook.com/ECELLADGITM</string>
    <string name="award">Won \'Delhi College Awards\' for the \'BEST ECELL\' category in allover Delhi hosted by THE EDUCATION TREE on 6th April 2016</string>
    <string name="mission_text">The primary mission of the cell is to imbue the spirit of entrepreneurship in students and faculty community from various colleges across India, inspire and encourage them to take on entrepreneurial challenges, and assist them in their efforts to launch and run business ventures.</string>
    <string name="image">image</string>
    <string name="user_pic">user pic</string>
    <string name="heading">Name</string>
    <string name="email_id">Email ID</string>
    <string name="logout">logout</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="edit_button">edit button</string>
    <string name="cancel">Cancel</string>
    <string name="your_name">Your Name *</string>
    <string name="registration_coming_soon">REGISTRATION COMING SOON…</string>
    <string name="close">CLOSE</string>
    <string name="event_registration_form">Event Registration Form</string>
    <string name="feedback">Feedback</string>
    <string name="register">REGISTER</string>
    <string name="know_more">KNOW MORE</string>
    <string name="past_events">Past Events</string>
    <string name="current_events">Current Events</string>
    <string name="tap_to_know_more">tap to know more</string>
    <string name="current_event_poster">current event poster</string>
    <string name="fb_logo">fb logo</string>
    <string name="follow_the_event_on">Follow the event on:</string>
    <string name="president">President</string>
    <string name="vice_president">Vice-President</string>
    <string name="team">Team</string>
    <string name="shivangi_mittal">Shivangi Mittal</string>
    <string name="pulkit_jain">Pulkit Jain</string>
    <string name="anshul_gupta">Anshul Gupta</string>
    <string name="kartik_jha">Kartik Jha</string>
    <string name="avadh_vashisth">Avadh Vashisth</string>
    <string name="shaleen_todwal">Shaleen Todwal</string>
    <string name="vivek_kumar">Vivek Kumar</string>
    <string name="terms_and_conditions">T &amp; C</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="credits">Credits</string>
    <string name="about_us">About Us</string>
    <string name="latest_version_of_the_app_is_available">Latest version of the app is available.</string>
    <string name="update">Update</string>
    <string name="events">Events</string>
    <string name="knowledge">Knowledge</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="you_are_not_signed_in">You are successfully Signed-Out</string>
    <string name="user_email_id">User Email ID</string>
    <string name="phone_number">Phone number</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="posts">Posts</string>
    <string name="user_profile_photo">Login</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="news_and_updates">News And Updates</string>
    <string name="articles_posts">Articles &amp; Posts</string>
    <string name="share">Share</string>
    <string name="registration_will_open_soon">Registration will open soon…</string>
    <string name="ecell_intro">E-Cell, ADGITM aims to strengthen entrepreneurial ecosystem as much
        as it\'s possible in order to induce the spirit of entrepreneurship in the student community.\n\n
        Since our inception we have put all the efforts in organising various events to provide a
        platform for those who are willing to take a risk and start something of their own.\n\n
        Through our programs we want to bring great ideas and people interested in making great things
        together to solve problems which is required for the welfare of the society.</string>
    <string name="no_current_events">No Current Events</string>
    <string name="registration_form">Registration Form</string>
    <string name="app_theme">App Theme</string>
    <string name="loading_image">Loading Image...</string>
    <string name="network_not_available">Network not available</string>
</resources>
