<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_news_and_updates"
            android:icon="@drawable/ic_website_black_24dp"
            android:title="@string/news_and_updates" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_menu_posts"
            android:title="@string/posts" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_us" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item android:id="@+id/nav_app_theme"
            android:icon="@drawable/ic_theme_black_24dp"
            android:title="@string/app_theme" />
    </group>

</menu>
