<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:padding="3dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/current_events"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:gravity="center"
        android:text="@string/no_current_events"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:padding="3dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/past_events"
        android:textSize="12sp" />

</LinearLayout>
